--- a/cn.zh-CN/RDS MySQL 数据库/数据安全/加密/设置白名单.md
+++ b/cn.zh-CN/RDS MySQL 数据库/数据安全/加密/设置白名单.md
@@ -113,7 +113,7 @@ RDS的白名单包括如下两种类型：
 **说明：**
 
         -   云外主机的应用程序中使用RDS实例的外网连接地址。
-        -   定位本地公网IP地址请参见[RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址](/cn.zh-CN/常见问题/连接/网络/RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址.md) |
+        -   定位本地公网IP地址请参见[RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址](/cn.zh-CN/常见问题/连接/网络/RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址.md) |
 
     **说明：**
 
@@ -175,7 +175,7 @@ RDS的白名单包括如下两种类型：
 
     -   公网IP地址不固定，可能会变动。
     -   IP地址查询工具或网站查询的公网IP地址不准确。
-    解决办法请参见[RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址](/cn.zh-CN/常见问题/连接/网络/RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址.md)。
+    解决办法请参见[RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址](/cn.zh-CN/常见问题/连接/网络/RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址.md)。
 
 
 ## 安全组注意事项
