--- a/intl.zh-CN/RDS MariaDB TX 数据库/快速入门/设置白名单.md
+++ b/intl.zh-CN/RDS MariaDB TX 数据库/快速入门/设置白名单.md
@@ -94,7 +94,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 **说明：**
 
         -   云外主机的应用程序中使用RDS实例的外网连接地址。
-        -   定位本地公网IP地址请参见[RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址](/intl.zh-CN/常见问题/连接/网络/RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址.md) |
+        -   定位本地公网IP地址请参见[RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址](/intl.zh-CN/常见问题/连接/网络/RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址.md) |
 
     **说明：**
 
@@ -184,7 +184,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 
     -   公网IP地址不固定，可能会变动。
     -   IP地址查询工具或网站查询的公网IP地址不准确。
-    解决办法请参见[RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址](/intl.zh-CN/常见问题/连接/网络/RDS MySQL/MariaDB如何确定外部服务器/客户端的公网IP地址.md)。
+    解决办法请参见[RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址](/intl.zh-CN/常见问题/连接/网络/RDS MySQL和MariaDB白名单设置：如何确定本地设备或外部服务器的公网IP地址.md)。
 
 
 ## 安全组注意事项
