--- a/cn.zh-CN/自研内核 AliPG/支持插件列表.md
+++ b/cn.zh-CN/自研内核 AliPG/支持插件列表.md
@@ -69,7 +69,7 @@
 |plproxy|2.9.0|2.9.0|2.8.0|无|
 |pltcl|无|无|无|1|
 |plv8|无|2.3.13|1.4.2|1.4.2|
-|postgis|无|2.5.1|2.5.1|2.2.8|
+|postgis|2.5.4|2.5.1|2.5.1|2.2.8|
 |postgis\_sfcgal|无|2.5.1|2.5.1|无|
 |postgis\_tiger\_geocoder|无|无|2.5.1|2.2.8|
 |postgis\_topology|无|2.5.1|2.5.1|2.2.8|
